--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -2,7 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
     <TextView
         android:layout_width="match_parent"
@@ -20,6 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/divider"
         android:background="@color/colorPrimary"
-        android:layout_marginTop="@dimen/padding_top"/>
+        android:layout_marginTop="@dimen/padding_top"
+        android:layout_marginBottom="@dimen/padding_top"/>
 
 </LinearLayout>
